<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/sfondo1" >

    <Button
        android:id="@+id/GotoRandom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="100dp"
        android:text="@string/GotoRandom"
        android:textSize="18sp" />

    <Button
        android:id="@+id/GotoClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="100dp"
        android:text="@string/GotoClock"
        android:textSize="20sp" />

    <Button
        android:id="@+id/GotoRules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="100dp"
        android:text="@string/GotoRules"
        android:textSize="20sp" />


</LinearLayout>
