<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_marginHorizontal="8dp"
            android:text="@string/ClockSet1" />

        <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginHorizontal="8dp"
            android:layout_column="1"
            android:layout_row="0"
            android:id="@+id/SetClock1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_marginHorizontal="8dp"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/ClockSet2" />

        <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginHorizontal="8dp"
            android:textColor="@android:color/black"
            android:layout_column="1"
            android:layout_row="1"
            android:id="@+id/SetClock2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_marginHorizontal="8dp"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/IncSet1" />

        <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginHorizontal="8dp"
            android:layout_column="1"
            android:layout_row="2"
            android:id="@+id/SetInc1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_marginHorizontal="8dp"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/IncSet2" />

        <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginHorizontal="8dp"
            android:layout_column="1"
            android:layout_row="3"
            android:id="@+id/SetInc2"/>

    </GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSet"
        android:id="@+id/btnSet"
        android:layout_gravity="center"/>

</LinearLayout>